--- a/assignment-14/about.html
+++ b/assignment-14/about.html
@@ -1,6 +1,6 @@
 <html>
  <head>
-     <title>About Us</title>
+     <title>Gallery</title>
      <meta charset="UTF-8">
      <meta name="description" content="About Us">
      <meta name="author" content="Montana Media Arts">
@@ -13,13 +13,13 @@
              <a href="index.html">Home</a>
          </div>
          <div class="menu-item">
-             <a href="about.html">About</a>
+             <a href="about.html">Shop Gallery</a>
          </div>
          <div class="menu-item">
              <a href="contact.html">Contact</a>
          </div>
          <div class="menu-item dropdown">
-             <a href="services.html">Shop Secret Services</a>
+             <a href="services.html">Services</a>
              <div class="dropdown-content">
                  <div class="dropdown-item">
                      <a href="https://www.nastygal.com/" target="_new">Nasty Gal</a>
@@ -43,12 +43,34 @@
 
 
      <section>
-       <div class="container">
-         <iframe width="560" height="315" src="https://www.youtube.com/embed/D27q0wXheEo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-         <div class="thirdimage">
-             <img alt="more road">
-         </div>
+       </div>
+       <div class="gallery">
+ <a target="_blank" href="img_5terre.jpg">
+   <img src="images/shoes.jpg" alt="shoes" width="600" height="400">
+ </a>
+ <div class="desc">Italian Shoes</div>
+</div>
+
+<div class="gallery">
+ <a target="image" href="bluehat.jpg">
+   <img src="images/bluehat.jpg" alt="hat" width="600" height="400">
+ </a>
+ <div class="desc">Blue Pork-Pie</div>
+</div>
+
+<div class="gallery">
+ <a target="image" href="redhat.jpg">
+   <img src="images/redhat.jpg" alt="redhat" width="600" height="400">
+ </a>
+ <div class="desc">Red Western Brixton</div>
+</div>
+
+<div class="gallery">
+ <a target="image" href="ring2.jpg">
+   <img src="images/ring2.jpg" alt= "ring" width="600" height="400">
+ </a>
+ <div class="desc">Add a description of the image here</div>
+</div>
          <div class="row">
 
          <div class="col-6">
