--- a/assignment-14/contact.html
+++ b/assignment-14/contact.html
@@ -15,22 +15,25 @@
               <a href="index.html">Home</a>
           </div>
           <div class="menu-item">
-              <a href="about.html">About</a>
+              <a href="phogtogallery.html">Photos</a>
+          </div>
+          <div class="menu-item">
+              <a href="videogallery.html">Videos</a>
           </div>
           <div class="menu-item">
               <a href="contact.html">Contact</a>
           </div>
           <div class="menu-item dropdown">
-              <a href="services.html">Shop Secret Services</a>
+              <a href="experience.html">Experience</a>
               <div class="dropdown-content">
                   <div class="dropdown-item">
-                      <a href="https://www.nastygal.com/" target="_new">Nasty Gal</a>
-                  </div>
-                  <div class="dropdown-item">
-                      <a href="http://carolinemillerphotography.com/" target="_new">Caroline Miller Photography</a>
-                  </div>
-                  <div class="dropdown-item">
-                      <a href="https://www.prairielacrosse.com/" target="_new">Prairie La Crosse</a>
+                    <a href="https://www.holidayonice.com/" target="_new">Holiday On Ice</a>
+                </div>
+                <div class="dropdown-item">
+                    <a href="http://www.wheelerproductions.com" target="_new">Magic On Ice</a>
+                </div>
+                <div class="dropdown-item">
+                    <a href="https://www.illusiononice.net/photos.html/" target="_new">Illusion On Ice</a>
                   </div>
               </div>
           </div>
