--- a/assignment-14/experience.html
+++ b/assignment-14/experience.html
@@ -47,9 +47,13 @@
      <h5>&nbsp;</h5>
 
      <section>
-         <img src="images/CariMaus.2019.Skating.Resume-5.pdf" alt="resume">
+         <img src="images/ResumeScreenShot.png" alt="resume">
+         <p>
+
+         </p>
+         <img src="images/ResumeRefShot.png" alt="resume">
      </section>
-     <p><a href="https://github.com/Montana-Media-Arts/341-web-design-Fall2020-resources/tree/master/assignment-13-example"
+     <p><a href="https://github.com/Montana-Media-Arts/341-web-design-Fall2020-resources/tree/master/assignment-14-example"
              target="_new">Download the Source</a></p>
  </body>
 
