--- a/assignment-14/index.html
+++ b/assignment-14/index.html
@@ -41,25 +41,25 @@
 
          </div>
      </header>
-     <h1>Lorem Ipsum</h1>
+     <h1>Cari Maus</h1>
 
     <img src="images/panther.jpg" style="width:100%;">
-
-      </div>
 
      <section>
 
          <div class="opening-paragraph" class="display-block">
 
              </div>
-
-          <p>   The Gypsy Collective is a place to find clothing, jewlery, footwear, and trinkets galore.
-             Created for all of my fellow vagabonds, The Gypsy Collective provides a communal place to sell
-             all your belongings that you still love. Focused on recycling all the joy in the world brought
-             by fashionable stuff.
+      <p>Cari Maus</p>
+          <p>
+~ Born and raised in Missoula, Montana her skating career started on a small pond in the mountains. The combination of athleticism, grace, and glamour drew her into a competitive career eventually leading to a professional one. She has been a professional for nine years, performing for multiple companies all over the globe including Holiday in Ice, Ice Theatre of New York, and Sun Valley On Ice. She is able to teach all ages and abilities. Her main goal is to build confidence and love for figure skating in every student.
 </p>
 
+<p>
+"The challenge that skating presents mentally, physically, and emotionally keeps me returning to the ice day after day. There is always something new to learn so it never gets old or boring. Skating teaches you the important lesson of whenever you fall down, you have to get back up."
+</p>
 
+        </section>
                <footer> All Rights Reserved</footer>
 
  </body>
